--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ body {
 header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: left;
   align-items: center;
   gap: 2rem;
   width: 100%;
@@ -316,7 +316,7 @@ header .toggle-button i.bx:hover {
     line-height: 2.5rem;
     margin: 0;
     /* margin-bottom: 2rem; */
-    padding-right: 4rem;
+    padding-right: 2rem;
     /* padding-top: 2rem; */
   }
 
