--- a/style.css
+++ b/style.css
@@ -233,6 +233,19 @@ header .toggle-button i.bx:hover {
   flex: 1;
 }
 
+#masthead-logos {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  margin: 3rem auto;
+}
+
+#masthead-logos img {
+  height: 100%;
+}
+
 .masthead-form {
   width: 100%;
   max-width: 450px;
@@ -276,6 +289,18 @@ header .toggle-button i.bx:hover {
   font-weight: 800;
   letter-spacing: 2px;
 }
+
+
+@media screen and (max-width: 730px) {
+  #masthead-logos {
+    flex-direction: column;
+  }
+
+  #masthead-logos img {
+    width: 50%;
+  }
+}
+
 
 /* Youtube */
 
