--- a/style.css
+++ b/style.css
@@ -222,9 +222,9 @@ header .toggle-button i.bx:hover {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background-color: var(--col-primary-darkest);
-  background: url('./images/website-masthead-sydney-01.jpg') bottom center fixed;
-  background-size: cover;
+  /* background-color: var(--col-primary-darkest); */
+  /* background: url('./images/website-masthead-sydney-01.jpg') bottom center fixed; */
+  /* background-size: cover; */
   color: var(--col-white);
 
 }
@@ -652,4 +652,13 @@ footer {
 
 i.bx {
   font-size: 1rem;
+}
+
+/* Background */
+
+.bg1 {
+  position: absolute;
+  top: 0;
+  z-index: -10;
+  object-fit: cover;
 }
